force-app/main/default/objects/Error_Log__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Class_Name_</label>
    <type>Text</type>
    <length>255</length>
</CustomField>