force-app/main/default/objects/Error_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error_Message_</label>
    <type>LongTextArea</type>
\n    <length>32768</length>
</CustomField>