force-app/main/default/objects/Error_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error_Type_</label>
    <type>Text</type>
    <length>100</length>
</CustomField>