force-app/main/default/objects/Error_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User_</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>\n    <relationshipLabel>User</relationshipLabel>\n    <relationshipName>User
</CustomField>